--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doodad-js-make",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "'Make' tool for doodad-js (alpha)",
   "config": {
     "Make": {
@@ -24,6 +24,14 @@
   "optionalDependencies": {
 	"browserify": "^13.0.0",
 	"webpack": "^1.13.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/doodadjs/doodad-js-make.git"
+  },
+  "bugs": {
+    "url": "https://github.com/doodadjs/doodad-js-make/issues",
+    "email": "doodadjs@gmail.com"
   },
   "tonicExampleFilename": "tonic.js"
 }
