--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "dependencies": {
     "app-module-path": "^2.2.0",
-    "npm-package-config": "^0.4.0"
+    "npm-package-config": "^0.5.0",
   },
   "optionalDependencies": {
     "browserify": "^14.4.0",
