--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   ],
   "dependencies": {
     "browserify": "^14.4.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "json-loader": "^0.5.7",
     "webpack": "^2.7.0",
     "@doodad-js/npc": "^0.8.0"
