--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   ],
   "dependencies": {
     "browserify": "^14.4.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint": "^4.16.0",
     "json-loader": "^0.5.7",
     "webpack": "^2.7.0",
     "@doodad-js/npc": "^0.8.0"
+  },
+  "devDependencies": {
+    "@doodad-js/eslint-config-base": "^1.2.1"
   },
   "repository": {
     "type": "git",
